New Venn diagram added

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -150,7 +150,7 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Thomas Bosch\inst{1} \and XXXXX\inst{2} \and XXXXX\inst{2} \and Kai Eckert\inst{3}}
+\author{Thomas Bosch\inst{1} \and Erman Acar\inst{2} \and XXXXX\inst{3} \and Kai Eckert\inst{2}}
 %
 \authorrunning{XXXXX} % abbreviated author list (for running head)
 %
@@ -158,11 +158,11 @@
 \institute{GESIS – Leibniz Institute for the Social Sciences, Germany\\
 \email{thomas.bosch@gesis.org},\\ 
 \and
+University of Mannheim, Germany \\
+\email{\{erman,kai\}@informatik.uni-mannheim.de} 
+\and
 XXXXX \\
 \email{XXXXX}
-\and
-University of Mannheim, Germany \\
-\email{kai@informatik.uni-mannheim.de} 
 }
 
 \maketitle              % typeset the title of the contribution
@@ -443,7 +443,7 @@ What is considered by rdf validation w/o reasoning, corresponds to performing SP
 Figure~\ref{fig:VennDiagram}.  
 \begin{figure}
 	\centering
-		\includegraphics[width=0.60\textwidth]{venn-diagram.jpg}
+		\includegraphics[width=0.80\textwidth]{complexiity_and_expressivity.png}
 	\caption{Complexity and Expressivity Classes}
 	\label{fig:VennDiagram}
 \end{figure}
