--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -174,7 +174,7 @@
 \email{thomas.bosch@gesis.org},\\ 
 \and
 University of Mannheim, Germany \\
-\email{\{erman,kai\}@informatik.uni-mannheim.de} 
+\email{\{christian,erman,kai\}@informatik.uni-mannheim.de} 
 \and
 XXXXX \\
 \email{XXXXX}
