added not approved authors

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -176,8 +176,8 @@
 University of Mannheim, Germany \\
 \email{\{christian,erman,kai\}@informatik.uni-mannheim.de} 
 \and
-XXXXX \\
-\email{XXXXX}
+The DBLP Computer Science Bibliography \\
+\email{nolle@hs-albsig.de}
 }
 
 \maketitle              % typeset the title of the contribution
