--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -779,8 +779,7 @@ validation environment in which DSCLs can be implemented by representing them in
 The implementation of the DSCLs is fully declarative,
 consisting of a SPIN mapping in RDF in form of SPARQL
 CONSTRUCT queries – which can also be represented in RDF using SPIN. 
-Within the SPIN validation environment, we fully implemented an automatic validation of all OWL 2 DL constructs. 
-\an{you should mention at this point that this validation is in terms of RDF validation, because inconsistency can't be done completely}
+Within the SPIN validation environment, we fully implemented an automatic RDF validation of all OWL 2 DL constructs. 
 The implementation can be tested at \url{http://purl.org/net/rdfval-demo} and
 the OWL 2 SPIN mapping is maintained at \url{https://github.com/boschthomas/OWL2-SPIN-Mapping}.
 
